syntax = "proto3";
option java_package = "cool.houge.grpc";
option java_outer_classname = "AgentPb";

message LinkRequest {
  // 终端的标识名
  string name = 1;
  // 终端的主机名
  string host_name = 2;
}

message LinkResponse {
  oneof kind {
    Command command = 1;
    PacketMixin packet_mixin = 2;
  }
}

// Packet混合转发类型
enum PacketMixinType {
  // 将Packet发送给指定的用户
  USER = 0;
  // 将Packet发送给指定的群组
  GROUP = 1;
  // 将Packet发送给所有在线用户
  ALL = 9;
}

// Packet
message PacketMixin {
  // 转发的类型
  PacketMixinType type = 1;
  // 接收者
  repeated int64 to = 2;
  // 转发的数据
  bytes data_bytes = 3;
  // 过滤终端的标识
  string filter = 9;
}

message Command {

  message SubGroup {
    int64 uid = 1;
    repeated int64 gids = 2;
  }

  message UnsubGroup {
    int64 uid = 1;
    repeated int64 gids = 2;
  }

  oneof kind {
    SubGroup sub_group = 6;
    UnsubGroup unsub_group = 7;
  }
}

service Agent {

  rpc Link(LinkRequest) returns(stream LinkResponse) {}
}