//
// Copyright 2019-2021 the original author or authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";
option java_package = "cool.houge.grpc";
option java_outer_classname = "MessagePb";

message SendMessageRequest {
  // 消息发送者
  fixed64 from = 2;
  // 消息接收者
  fixed64 to = 3;
  // 消息内容
  string content = 4;
  // 消息内容类型
  ContentType content_type = 5;
  // 扩展参数会原样转发给客户端
  string extra_args = 9;

  // 消息内容
  enum ContentType {
    // 文本消息类型
    TEXT = 0;
  }
}

message SendMessageResponse {
  // 消息 ID
  string message_id = 1;
}

// 消息服务
service Message {

  rpc SendToUser(SendMessageRequest) returns(SendMessageResponse) {}

  rpc SendToGroup(SendMessageRequest) returns(SendMessageResponse) {}
}
